<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <RelativeLayout android:id="@+id/firewall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dip"
        android:paddingRight="6dip"
        android:paddingTop="6dip"
        android:paddingBottom="0dip"
        android:background="@drawable/list_selector_background">   
        <TextView android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:ellipsize="marquee"
            android:text="@string/datamonitor_firewall"
            android:layout_centerVertical="true"
            android:fadingEdge="horizontal" />           
        <TextView android:id="@+id/summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_alignLeft="@id/title"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/datamonitor_switch"
            android:visibility="gone"
            android:maxLines="4" />
        <LewaCheckBox android:id="@+id/firewall_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:focusable="false"
            android:clickable="false"
            android:longClickable="false"
            />
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="0dip"
        android:layout_marginBottom="0dip"
        >
        <TextView android:id="@+id/app_control" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#007aff"
            android:ellipsize="marquee"
            android:text="@string/app_control"
            android:layout_centerVertical="true"
            android:fadingEdge="horizontal" />
        <ImageView android:id="@+id/wifi_access" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip" 
            android:layout_marginRight="0dip" 
            android:layout_alignParentRight="true"
            android:src="@drawable/wifi_on" /> 
        <ImageView android:id="@+id/mobile_access" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/wifi_access"
            android:layout_marginLeft="5.0dip" 
            android:layout_marginRight="0dip" 
            android:src="@drawable/mobile_on" /> 
    </RelativeLayout>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="@drawable/line3"
        />

    <RelativeLayout android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:orientation="horizontal" 
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dip">
        <ProgressBar android:id="@+id/loadingProgressBar"    
            style="?android:attr/progressBarStyleSmall" 
            android:layout_width="wrap_content"   
            android:layout_height="wrap_content"
            android:paddingTop="3dip"
            android:paddingRight="5dip"
            android:layout_alignParentLeft="true"/> 
        <TextView android:id="@+id/loadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#515151"
            android:layout_toRightOf="@id/loadingProgressBar"
            android:text="@string/loading_apps_list"
            />
    </RelativeLayout>
    
    <ListView android:id="@+id/list" 
        android:layout_width="fill_parent" 
        android:layout_height="0.0dip"
        android:cacheColorHint="#00000000"
        android:layout_weight="1.0" />
</LinearLayout>
